--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <p>
                 The master's program "Marine Biodiversity and Biological Resources" is a unique educational course aimed at training specialists who are in demand in the fields of marine biology, ecology, conservation, and biological resource management. The primary objective of the program is to prepare professionals who can make significant contributions to the research, conservation, and sustainable use of marine biodiversity and biological resources.
             </p>
-            <a href="#" class="btn btn-primary">Learn more</a>
+            <a href="about.html" class="btn btn-primary">Learn more</a>
         </div>
     </div>
 
